objects/AcctSeed__GL_Account_Specification__mdt/AcctSeed__GL_Account_Specification__mdt.object-meta.xml
<CustomObject>
    <label>GL Account Specification</label>
    <pluralLabel>GL Account Specifications</pluralLabel>
</CustomObject>