objects/AcctSeed__GL_Account_Specification__mdt/fields/AcctSeed__Allowed_GL_Sub_Type_1__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Allowed_GL_Sub_Type_1__c</fullName>
    <label>Allowed GL Sub Type 1</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any</fullName>
                <default>true</default>
                <label>Any</label>
            </value>
            <value>
                <fullName>Assets</fullName>
            </value>
            <value>
                <fullName>Cost of Goods Sold</fullName>
            </value>
            <value>
                <fullName>Facilities</fullName>
            </value>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Liabilities</fullName>
            </value>
            <value>
                <fullName>Owners Equity</fullName>
            </value>
            <value>
                <fullName>Product Revenue</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Marketing</fullName>
            </value>
            <value>
                <fullName>Service Revenue</fullName>
            </value>
            <value>
                <fullName>General &amp; Administrative</fullName>
            </value>
            <value>
                <fullName>Operating</fullName>
            </value>
            <value>
                <fullName>Investing</fullName>
            </value>
            <value>
                <fullName>Financing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>