objects/AcctSeed__GL_Account_Specification__mdt/fields/AcctSeed__Allowed_GL_Types__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Allowed_GL_Types__c</fullName>
    <label>Allowed GL Types</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Any</fullName>
                <default>true</default>
                <label>Any</label>
            </value>
            <value>
                <fullName>Balance Sheet</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
            <value>
                <fullName>Cash Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>