objects/AcctSeed__GL_Account_Specification__mdt/fields/AcctSeed__Bank_Restriction__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Bank_Restriction__c</fullName>
    <label>Bank Restriction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Restriction</fullName>
                <default>true</default>
                <label>No Restriction</label>
            </value>
            <value>
                <fullName>Must be Bank</fullName>
            </value>
            <value>
                <fullName>Must NOT be Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>