objects/AcctSeed__GL_Account_Specification__mdt/fields/AcctSeed__Help_Text__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Help_Text__c</fullName>
    <label>Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>