objects/AcctSeed__GL_Account_Specification__mdt/fields/AcctSeed__Required__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>