objects/AcctSeed__GL_Account_Specification__mdt/fields/AcctSeed__Restrict_Existing_Transactions_on_Edit__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Restrict_Existing_Transactions_on_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restrict Existing Transactions on Edit</label>
    <type>Checkbox</type>
</CustomField>