objects/AcctSeed__GL_Account_Specification__mdt/fields/AcctSeed__Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeed__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting Close</fullName>
            </value>
            <value>
                <fullName>Accounts Payable</fullName>
            </value>
            <value>
                <fullName>Accounts Receivable</fullName>
            </value>
            <value>
                <fullName>Amortize Revenue</fullName>
            </value>
            <value>
                <fullName>Amortize Expense</fullName>
            </value>
            <value>
                <fullName>Multi-Currency Settings</fullName>
            </value>
            <value>
                <fullName>Product Costing</fullName>
            </value>
            <value>
                <fullName>Project Accounting</fullName>
            </value>
            <value>
                <fullName>Cash Flow Category</fullName>
            </value>
            <value>
                <fullName>User Defined</fullName>
            </value>
            <value>
                <fullName>Cash Basis Accounting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>